<?xml version="1.0"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_start_transaction"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin">

                <LinearLayout
                    android:id="@+id/button_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <Button
                        android:id="@+id/btn_card"
                        style="@style/buttonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="40"
                        android:text="@string/card" />

                    <Button
                        android:id="@+id/btn_no_card"
                        style="@style/buttonWithNoColorStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="40"
                        android:text="@string/no_card" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Amount" />

                <com.worldpay.library.views.iM3FormEditText
                    android:id="@+id/dialog_field_transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edittext_rounded"
                    android:gravity="end"
                    android:hint="Transaction Amount"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Cash Back"
                    android:visibility="gone" />

                <com.worldpay.library.views.iM3FormEditText
                    android:id="@+id/wp_tx_dialog_field_cash_back_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edittext_rounded"
                    android:gravity="right"
                    android:hint="Cash Back Amount"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/transaction"
                    android:visibility="gone" />

                <com.worldpay.library.views.iM3SimpleFormSpinner
                    android:id="@+id/wp_tx_dialog_spinner_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/transaction_swiper_types" />

                <com.worldpay.library.views.iM3SimpleFormSpinner
                    android:id="@+id/spn_swiper_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/transaction_types" />

                <com.worldpay.library.views.iM3SimpleFormSpinner
                    android:id="@+id/spn_transaction_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add to Vault"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/addToVaultCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@android:color/transparent"
                        android:gravity="end|center_vertical" />

                </LinearLayout>


                <Button
                    android:id="@+id/btn_start_transaction"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/start_transaction" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>